Sun Jan 22 19:31:25 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (SymbolCompare): Fix AOF symbol sorting.
	(Symbol_CreateSymbolOut): When doing AOF output, have local symbols
	last.

Sun Jan 22 18:12:47 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/label_alignment.s: Add.
	* commands.c (c_dci): Use Area_AlignArea iso Area_AlignTo.
	* symbol.c (SymbolCompare): Order AOF mapping symbols differently.
	There are no specifications of this, so this is guesswork.
	* put.c (Put_DataWithOffset, Put_InsWithOffset): Follow
	Area_EnsureExtraSize API change.
	* put.c, put.h (Put_Data, Put_DataWithOffset, Put_AlignDataWithOffset,
	Put_FloatDataWithOffset, Put_InsWithOffset, GetWord): Change type of
	offset into uint32_t and size into unsigned.
	* decode.c (decode): Align label value in front of ARM/Thumb
	instruction.
	* local.c (c_rout): Align label value.
	* area.c, area.h (Area_EnsureExtraSize): Add area symbol parameter.
	(Area_AlignOffset, Area_AlignArea): Add.
	(Area_AlignTo): Change type offset into uint32_t and type align into
	unsigned.
	(Area_MarkStartAs): Add area symbol and offset parameters.
	* asm.c, asm.h (ASM_DefineLabel): Change type offset into uint32_t.
	* lit.c (Lit_DumpPool): Follow Area_MarkStartAs API change. Use
	Area_AlignArea iso Area_AlignTo.

Sun Jan 15 22:06:27 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/register_types.s: Add.
	* symbol (Symbol_Define): Don't check for symbol redefinition being
	done in different areas for registers.

Sun Jan 15 21:14:55 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* main.c (finished): Remove.
	(atexit_handler): Delete output file on error when we have at least
	reached the assembling stage.

Sun Jan 15 19:28:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/option_uppercase.s: Add.
	* decode.c (decode): Take option_uppercase into account.
	* main.c (option_uppercase): Add.
	(main): Add support for -UpperCase option.